classDiagram
    direction LR

    namespace payment {
        class PaymentService {
            + prepare()
        }
    }

    namespace exchangerate {
        class ExchangeRateProvider {
            <<interface>>
            + getExchangeRate()
        }

        class HttpApiExchangeRateProvider {
            + getExchangeRate()
        }

        class ExchangeRateData {
        }
    }

    PaymentService ..> ExchangeRateProvider: 사용
    ExchangeRateProvider <|.. HttpApiExchangeRateProvider: 구현
    HttpApiExchangeRateProvider ..> ExchangeRateData